View Details occupied solved

--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -285,11 +285,10 @@
                                     formatter: '.Formatter.formatStartingPrice'}" class="bedCardPrice"/>
                                     <HBox justifyContent="Center" alignItems="Center">
                                         <Button
-                                            text="{=${VisibilityModel>Visible}=== true ? 'View Details' : 'Occupied' }"
+                                            text="View Details"
                                             type="Default"
                                             press=".viewDetails"
                                             class="viewBtn"
-                                            enabled="{VisibilityModel>Visible}"
                                         />
                                     </HBox>
                                 </VBox>
